Fix(wiki): header z-index 추가
헤더가 컨텐츠에 가려지는 문제 해결

--- a/mos/src/main/resources/static/css/wiki/view.css
+++ b/mos/src/main/resources/static/css/wiki/view.css
@@ -7,6 +7,7 @@ header {
   top: 0;
   transition: top 0.2s ease-in-out;
   width: 100%;
+  z-index: 10;
 }
 
 .nav-up {
